<resources>

    <string name="app_name">MasterLeague</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_imagen_liga">Logo de la liga</string>
    <string name="pais">País:</string>
    <string name="fundacion">Año de fundación:</string>
    <string name="descripcion">Descripción:</string>
    <string name="volver">Volver</string>
    <string name="desc_imagen_noticia">Imagen de la noticia</string>
    <string name="ver_completo">Ver noticia completa</string>
    <string name="appLogo">MasterLeague</string>
    <string name="app_logo">logo</string>
    <string name="desc_arrow_icon">icono flecha</string>
    <string name="league_logo">League Logo</string>
    <string name="standings">Standings</string>
    <string name="matches">Matches</string>
    <string name="stats">Statistics</string>
    <string name="recent_matches">Recent Matches</string>
    <string name="upcoming_matches">Upcoming Matches</string>
    <string name="top_scorers">Top Scorers</string>
    <string name="team_logo">Team Logo</string>
    <string name="player_photo">Player Photo</string>
    <string name="goals_abbr">goles</string>
    <string name="no_data_available">No data available</string>
    <string name="retry">Retry</string>
    <string name="standings_list">Partidos\n</string>
    <string name="no_scorers_found">No se encontraron goleadores</string>
    <string name="loading_scorers">Cargando goleadores...</string>
    <string name="error_loading_scorers">Error al cargar goleadores</string>
    <string name="no_news_found">No se encontraron noticias</string>
    <string name="error_loading_news">Error al cargar noticias</string>
    <string name="back">volver</string>
    <string name="proximos_partidos">Proximos Partidos\n</string>
    <string name="partidos_pasados">Partidos Pasados</string>
    <string name="assists_abbr">assits\n</string>
    <string name="logo_liga">logo liga</string>
    <string name="ligas">ligas\n</string>

</resources>